syntax = "proto3";

package protobuf;
option go_package = "protobufpb";
option java_multiple_files = true;
option java_package = "com.protobuf";
option java_outer_classname = "BaseProto";

// Message represents what is the purpose of object
enum Message {
  MESSAGE_INVALID = 0;

  // Metadata of QUERY action for user object
  MESSAGE_QUERY_USER_ID = 20;
  MESSAGE_QUERY_USER_EMAIL = 21;
  MESSAGE_QUERY_USER_RESET_PWD = 22;
  MESSAGE_QUERY_USER_CHANGE_PWD = 23;
}

// Object represents table/struct
//
// [USER], [USER PWD], [WALLET], [MARKET], [ASSET], and [TNX]
enum Object {
  OBJECT_INVALID = 0;
  OBJECT_USER = 1;
}

// Action represents:
//
// STORE, QUERY
enum Action {
  ACTION_INVALID = 0;
  ACTION_STORE = 1;
  ACTION_QUERY = 2;
}

// Ex:
//
// [action]   ----  [object]   -----  [message]
// query             wallet           user_wallet
message BaseReq {
  Action action = 1;
  Object object_type = 2;
  Message message = 3;
}